ActivityRoutePlanner/lib/mapping.treetop
grammar Mapping
	
	rule mapping
		(map "," space "\n"*)+
	end
	
	rule map
		'(' space class space ',' space "Class" space conzept space ')' /
		'(' space class space ',' space ')'
	end
	
	rule conzept
		 exists / not / or / and / atomic
	end
	
	rule not
		"not " space conzept
	end
	
	rule or
		"or " (space conzept)+
	end
	
	rule and
		"and " (space conzept)+
	end
	
	rule exists
		"exists " space role space "." space conzept
	end
	
	rule role
		[a-zA-Z_]+
	end
	
	rule atomic
		[a-zA-Z_]*
	end
	
	rule class
		"Class " [a-zA-Z_]+
	end
	
	rule space
		" "*
	end


end
